[gd_scene load_steps=18 format=3 uid="uid://skn1d7kismjk"]

[ext_resource type="Texture2D" uid="uid://du1lqj3jqa806" path="res://Sprites/SwampLevel1/Items/Water_lily/Torn_water_lily.png" id="1_3bs8x"]
[ext_resource type="Script" path="res://Scene/Swamp_Level_1/Water_lilies/torn_water_lily.gd" id="1_358y0"]
[ext_resource type="Texture2D" uid="uid://cw1ubqnkiyemp" path="res://Sprites/Shadow.png" id="2_dr80v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5x6ep"]
size = Vector2(152, 87.875)

[sub_resource type="Animation" id="Animation_axdw4"]
resource_name = "Animation_torn_water_lily"
length = 5.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Torn_water_lily:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.5, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 5), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_uioce"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Torn_water_lily:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jmdup"]
_data = {
"Animation_torn_water_lily": SubResource("Animation_axdw4"),
"RESET": SubResource("Animation_uioce")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o8er2"]
size = Vector2(150, 20)

[sub_resource type="Animation" id="Animation_vsia5"]
resource_name = "Animation_player_on_torn_water_lily"
length = 1.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Shadow:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 1.4, 1.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 3), Vector2(0, 3), Vector2(0, 120)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../TornWaterLily:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.7, 0.9, 1.1, 1.2, 1.3, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.0523599, 0.0523599, -0.0523599, 0.0523599, -0.0523599, 0.0523599, -0.0523599, 0.0]
}

[sub_resource type="Animation" id="Animation_a41nl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Shadow:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ylup0"]
_data = {
"Animation_player_on_torn_water_lily": SubResource("Animation_vsia5"),
"RESET": SubResource("Animation_a41nl")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v8dog"]
size = Vector2(528, 477)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_0a2ii"]
load_path = "res://.godot/imported/Water_drops.png-1795a9f71293132b4b23ffca6e5fd15e.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_jo047"]
load_path = "res://.godot/imported/Water_drops.png-1795a9f71293132b4b23ffca6e5fd15e.ctex"

[sub_resource type="Animation" id="Animation_l8h2q"]
resource_name = "Animation_water_drops"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WaterDrops_left:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-90, 0), Vector2(-124, -13)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WaterDrops_left:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WaterDrops_left:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.959931, 0.436332]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WaterDrops_right:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(90, 0), Vector2(124, -13)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("WaterDrops_right:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("WaterDrops_right:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.959931, -0.436332]
}

[sub_resource type="Animation" id="Animation_mi15o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WaterDrops_left:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-106, 2.86102e-06)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WaterDrops_left:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WaterDrops_left:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.959931]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WaterDrops_right:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(106, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("WaterDrops_right:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("WaterDrops_right:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.959931]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8lu7v"]
_data = {
"Animation_water_drops": SubResource("Animation_l8h2q"),
"RESET": SubResource("Animation_mi15o")
}

[node name="Torn_water_lily" type="Sprite2D"]
script = ExtResource("1_358y0")

[node name="Torn_water_lily" type="AnimatableBody2D" parent="."]
collision_mask = 2
sync_to_physics = false

[node name="Shadow" type="Sprite2D" parent="Torn_water_lily"]
position = Vector2(0.500006, 14.1875)
scale = Vector2(0.341, 0.437)
texture = ExtResource("2_dr80v")

[node name="TornWaterLily" type="Sprite2D" parent="Torn_water_lily"]
position = Vector2(0, 3.00002)
texture = ExtResource("1_3bs8x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Torn_water_lily"]
position = Vector2(0, 38)
shape = SubResource("RectangleShape2D_5x6ep")
debug_color = Color(0.305882, 0.596078, 0.54902, 0.419608)

[node name="Animation_torn_water_lily" type="AnimationPlayer" parent="Torn_water_lily"]
unique_name_in_owner = true
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_jmdup")
}
autoplay = "Animation_torn_water_lily"

[node name="Area_player" type="Area2D" parent="Torn_water_lily"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Torn_water_lily/Area_player"]
position = Vector2(0, -2.99998)
shape = SubResource("RectangleShape2D_o8er2")
debug_color = Color(0.682353, 0.470588, 0.482353, 0.419608)

[node name="Animation_player_on_torn_water_lily" type="AnimationPlayer" parent="Torn_water_lily/Area_player"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_ylup0")
}

[node name="Area_exit_player" type="Area2D" parent="Torn_water_lily"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Torn_water_lily/Area_exit_player"]
position = Vector2(0, -90)
shape = SubResource("RectangleShape2D_v8dog")
debug_color = Color(0.607843, 0.537255, 0.117647, 0.419608)

[node name="Water_drops" type="Node2D" parent="Torn_water_lily"]

[node name="WaterDrops_left" type="Sprite2D" parent="Torn_water_lily/Water_drops"]
modulate = Color(1, 1, 1, 0)
position = Vector2(-106, 2.86102e-06)
rotation = 0.959931
texture = SubResource("CompressedTexture2D_0a2ii")

[node name="WaterDrops_right" type="Sprite2D" parent="Torn_water_lily/Water_drops"]
modulate = Color(1, 1, 1, 0)
position = Vector2(106, 0)
rotation = -0.959931
texture = SubResource("CompressedTexture2D_jo047")
flip_h = true

[node name="Animation_water_drops" type="AnimationPlayer" parent="Torn_water_lily/Water_drops"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_8lu7v")
}

[connection signal="body_entered" from="Torn_water_lily/Area_player" to="." method="_on_area_player_body_entered"]
[connection signal="body_exited" from="Torn_water_lily/Area_exit_player" to="." method="_on_area_exit_player_body_exited"]
